_python/python_fundamentals/hello_world.txt
  File "/Users/maxinecausevic/Python_stack/_python/python_fundamentals/hello_world.py", line 11
    print( "hello" + -- )	# with a +	-- this one should give us an error!
                        ^
SyntaxError: invalid syntax
maxinecausevic@maxines-MacBook-Pro python_fundamentals % python hello_world.py
Hello World
maxinecausevic@maxines-MacBook-Pro python_fundamentals % python hello_world.py
('hello', 'Noelle')
helloNoelle
maxinecausevic@maxines-MacBook-Pro python_fundamentals % python hello_world.py
('hello', 42)
maxinecausevic@maxines-MacBook-Pro python_fundamentals % python hello_world.py
Traceback (most recent call last):
  File "hello_world.py", line 10, in <module>
    print( "hello" + name )	# with a +	-- this one should give us an error!
TypeError: cannot concatenate 'str' and 'int' objects
maxinecausevic@maxines-MacBook-Pro python_fundamentals % python hello_world.py
Ilove to eat sushi and pizza 
maxinecausevic@maxines-MacBook-Pro python_fundamentals % python hello_world.py
  File "hello_world.py", line 15

SyntaxError: invalid syntax
maxinecausevic@maxines-MacBook-Pro python_fundamentals % python hello_world.py
  File "hello_world.py", line 15
    print(F"I love to eat {fave_food1} and {fave_food2} ") 
                                                        ^
SyntaxError: invalid syntax
maxinecausevic@maxines-MacBook-Pro python_fundamentals % python hello_world.py
  File "hello_world.py", line 15
    print(f"I love to eat {fave_food1} and {fave_food2}) 
                                                        ^
SyntaxError: EOL while scanning string literal
maxinecausevic@maxines-MacBook-Pro python_fundamentals % python hello_world.py
  File "hello_world.py", line 15
    print(f"I love to eat {fave_food1} and {fave_food2}") 
                                                       ^
SyntaxError: invalid syntax
maxinecausevic@maxines-MacBook-Pro python_fundamentals % python hello_world.py
  File "hello_world.py", line 15
    print(f'I love to eat {fave_food1} and {fave_food2}') 
                                                       ^
SyntaxError: invalid syntax
maxinecausevic@maxines-MacBook-Pro python_fundamentals % python3 hello_world.py
I love to eat sushi and pizza
maxinecausevic@maxines-MacBook-Pro python_fundamentals % 